# lib/api-spec/openapi.yaml
@@ -178,11 +178,17 @@ components:
           type: string
         is_premium:
           type: boolean
+        credits:
+          type: integer
+        document_limit:
+          type: integer
         documents_count:
           type: integer
       required:
         - email
         - is_premium
+        - credits
+        - document_limit
         - documents_count
 
     GenerateInput:
